Apply gapless body

--- a/archive.html
+++ b/archive.html
@@ -38,38 +38,41 @@
             <a href="archive.html">Archive</a>
             <a href="changelogs.html">Changelogs</a>
         </nav>
-        <noscript>
-            <div class="banner error">
-                <p class="techdoc-remark">This page requires Javascript features. Please enable it in the browser
-                    setting.</p>
-            </div>
-        </noscript>
-        <article>
-            <p><i>This page is under constructios</i></p>
-            <div class="file-sample-field">
-                <h6><a
-                        href="https://github.com/Logginwolf/docs/blob/main/examples/preferences.json">preferences.json</a>
-                </h6>
-                <textarea id="preferences-sample" disabled></textarea>
-            </div>
-            <div class="file-sample-field">
-                <h6><a href="https://github.com/Logginwolf/docs/blob/main/examples/rounds.csv?plain=1">rounds.csv</a>
-                </h6>
-                <textarea id="rounds-sample" disabled></textarea>
-            </div>
-        </article>
-        <footer class="copyright">
-            <a href="https://github.com/rk0cc" class="snslink gh">
-                <i class="fa-brands fa-github"></i>
-            </a>
-            <a href="https://x.com/rk0cc_osp" class="snslink xtw">
-                <i class="fa-brands fa-x-twitter"></i>
-            </a>
-            <a href="https://bsky.app/profile/osp.rk0cc.xyz" class="snslink bsky">
-                <i class="fa-brands fa-bluesky"></i>
-            </a>
-            <code>&copy;&nbsp;2025&nbsp;rk0cc</code>
-        </footer>
+        <div class="ctx">
+            <noscript>
+                <div class="banner error">
+                    <p class="techdoc-remark">This page requires Javascript features. Please enable it in the browser
+                        setting.</p>
+                </div>
+            </noscript>
+            <article>
+                <p><i>This page is under constructios</i></p>
+                <div class="file-sample-field">
+                    <h6><a
+                            href="https://github.com/Logginwolf/docs/blob/main/examples/preferences.json">preferences.json</a>
+                    </h6>
+                    <textarea id="preferences-sample" disabled></textarea>
+                </div>
+                <div class="file-sample-field">
+                    <h6><a
+                            href="https://github.com/Logginwolf/docs/blob/main/examples/rounds.csv?plain=1">rounds.csv</a>
+                    </h6>
+                    <textarea id="rounds-sample" disabled></textarea>
+                </div>
+            </article>
+            <footer class="copyright">
+                <a href="https://github.com/rk0cc" class="snslink gh">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="https://x.com/rk0cc_osp" class="snslink xtw">
+                    <i class="fa-brands fa-x-twitter"></i>
+                </a>
+                <a href="https://bsky.app/profile/osp.rk0cc.xyz" class="snslink bsky">
+                    <i class="fa-brands fa-bluesky"></i>
+                </a>
+                <code>&copy;&nbsp;2025&nbsp;rk0cc</code>
+            </footer>
+        </div>
         <script>
             (function () {
                 var ta = [
