--- a/changelogs.html
+++ b/changelogs.html
@@ -25,19 +25,21 @@
             <a href="archive.html">Archive</a>
             <a href="changelogs.html">Changelogs</a>
         </nav>
-        <article></article>
-        <footer class="copyright">
-            <a href="https://github.com/rk0cc" class="snslink gh">
-                <i class="fa-brands fa-github"></i>
-            </a>
-            <a href="https://x.com/rk0cc_osp" class="snslink xtw">
-                <i class="fa-brands fa-x-twitter"></i>
-            </a>
-            <a href="https://bsky.app/profile/osp.rk0cc.xyz" class="snslink bsky">
-                <i class="fa-brands fa-bluesky"></i>
-            </a>
-            <code>&copy;&nbsp;2025&nbsp;rk0cc</code>
-        </footer>
+        <div class="ctx">
+            <article></article>
+            <footer class="copyright">
+                <a href="https://github.com/rk0cc" class="snslink gh">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="https://x.com/rk0cc_osp" class="snslink xtw">
+                    <i class="fa-brands fa-x-twitter"></i>
+                </a>
+                <a href="https://bsky.app/profile/osp.rk0cc.xyz" class="snslink bsky">
+                    <i class="fa-brands fa-bluesky"></i>
+                </a>
+                <code>&copy;&nbsp;2025&nbsp;rk0cc</code>
+            </footer>
+        </div>
     </body>
 
 </html>
