--- a/roles.html
+++ b/roles.html
@@ -26,26 +26,33 @@
             <a href="archive.html">Archive</a>
             <a href="changelogs.html">Changelogs</a>
         </nav>
-        <article>
-            <p>Every roles who mentioned in this page is based on the manual from base game, <i>New Moon</i> and <i>The
-                    Village</i> expansion packs are retrived from <a
-                    href="https://cdn.1j1ju.com/medias/5f/6f/6b-the-werewolves-of-millers-hollow-the-pact-rulebook.pdf">manual
-                    from <i>The Pact</i></a>. Considering unpopularity of the <i>Werewolf</i>'s expansion packs, roles
-                from <i>Characters</i> expansion pack are not included due to overcomplexity of rules. Moreover, only
-                unique roles form variants will be listed below and simply offers localized name.</p>
-        </article>
-        <footer class="copyright">
-            <a href="https://github.com/rk0cc" class="snslink gh">
-                <i class="fa-brands fa-github"></i>
-            </a>
-            <a href="https://x.com/rk0cc_osp" class="snslink xtw">
-                <i class="fa-brands fa-x-twitter"></i>
-            </a>
-            <a href="https://bsky.app/profile/osp.rk0cc.xyz" class="snslink bsky">
-                <i class="fa-brands fa-bluesky"></i>
-            </a>
-            <code>&copy;&nbsp;2025&nbsp;rk0cc</code>
-        </footer>
+        <div class="ctx">
+            <article>
+                <section>
+                    <p>Every roles who mentioned in this page is based on the manual from base game, <i>New Moon</i> and
+                        <i>The Village</i> expansion packs are retrived from <a
+                            href="https://cdn.1j1ju.com/medias/5f/6f/6b-the-werewolves-of-millers-hollow-the-pact-rulebook.pdf">manual
+                            from <i>The Pact</i></a>. Considering unpopularity of the <i>Werewolf</i>'s expansion packs,
+                        roles from <i>Characters</i> expansion pack are not included due to overcomplexity of rules.
+                        Moreover, only unique roles form variants will be listed below and simply offers localized name.
+                    </p>
+                </section>
+                <section>
+                </section>
+            </article>
+            <footer class="copyright">
+                <a href="https://github.com/rk0cc" class="snslink gh">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="https://x.com/rk0cc_osp" class="snslink xtw">
+                    <i class="fa-brands fa-x-twitter"></i>
+                </a>
+                <a href="https://bsky.app/profile/osp.rk0cc.xyz" class="snslink bsky">
+                    <i class="fa-brands fa-bluesky"></i>
+                </a>
+                <code>&copy;&nbsp;2025&nbsp;rk0cc</code>
+            </footer>
+        </div>
     </body>
 
 </html>
