Reserve fragment link

--- a/roles.html
+++ b/roles.html
@@ -34,10 +34,21 @@
                             href="https://cdn.1j1ju.com/medias/5f/6f/6b-the-werewolves-of-millers-hollow-the-pact-rulebook.pdf">manual
                             from <i>The Pact</i></a>. Considering unpopularity of the <i>Werewolf</i>'s expansion packs,
                         roles from <i>Characters</i> expansion pack are not included due to overcomplexity of rules.
-                        Moreover, only unique roles form variants will be listed below and simply offers localized name.
                     </p>
+											<p>Most variants inhert majority roles and abilities from the original game with localization.
+												 Therefore, their localized name will be appeared first along with translation or equivalent 
+												 name from original game if applied.</p>
                 </section>
                 <section>
+										<ul>
+											<li>Origin
+														<ul>
+															<li>Base game</li>
+															<li><i>New Moon</i></li>
+															<li><i>The Village</i></li>
+														</ul>
+											</li>
+											<li>Chinese</li>
                 </section>
             </article>
             <footer class="copyright">
