--- a/archive.html
+++ b/archive.html
@@ -6,7 +6,7 @@
         <title>Archive format specification - Logginwolf technical documentation</title>
         <meta name="keywords"
             content="werewolf, Miller's Hollow, archive, party, character, game, board, application, support">
-        <meta name="description" content="Documentations website of Logginwolf's technical informations.">
+        <meta name="description" content="Standard data format for representing previous play record from Logginwolf.">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/fontawesome.min.css"
             integrity="sha512-v8QQ0YQ3H4K6Ic3PJkym91KoeNT5S3PnDKvqnwqFD1oiqIl653crGZplPdU5KKtHjO0QKcQ2aUlQZYjHczkmGw=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
