--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
                         <li>Origin <ul>
                                 <li>Basic</li>
                                 <li>Expansion pack 1: <i>New Moon</i></li>
-                                <li>Expansion pack 2: <i>The Village</i></li>
                             </ul>
                         </li>
                         <li>Chinese &lpar;狼人杀/狼人殺&rpar;</li>
@@ -63,7 +62,7 @@
                             href="https://www.mozilla.org/en-US/MPL/2.0/"><abbr
                                 title="Mozilla Public License, Version 2.0">MPL 2.0</abbr></a> license.</p>
                 </section>
-                <section>
+                <section id="background">
                     <header>
                         <h3>Background</h3>
                     </header>
@@ -77,7 +76,7 @@
                         third teams that these improvment can make the game progress becomes compact to attract peoples
                         who have limited vacant times.</p>
                 </section>
-                <section>
+                <section id="rules">
                     <header>
                         <h3>Rules</h3>
                     </header>
