--- a/roles.html
+++ b/roles.html
@@ -6,7 +6,7 @@
         <title>Player roles - Logginwolf technical documentation</title>
         <meta name="keywords"
             content="werewolf, Miller's Hollow, archive, party, character, game, board, application, support, Townfolk, Villager, Thief, Seer, Sheriff, Witch, Hunter, Cupid, Little Girl, Elder, Scapegoat, Defender, Piper, Pyromanic, Scandalmonger">
-        <meta name="description" content="Roles explainations in Werewolf game .">
+        <meta name="description" content="Roles availability in Logginwolf with explainations.">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/fontawesome.min.css"
             integrity="sha512-v8QQ0YQ3H4K6Ic3PJkym91KoeNT5S3PnDKvqnwqFD1oiqIl653crGZplPdU5KKtHjO0QKcQ2aUlQZYjHczkmGw=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,6 +16,19 @@
         <link rel="prev" href="index.html" />
         <link rel="next" href="archive.html" />
         <link type="text/css" rel="stylesheet" href="common.css">
+        <style>
+            table.role-table tr>th.fix-layout.s {
+                width: 56px;
+            }
+
+            table.role-table tr>th.fix-layout.m {
+                width: 128px;
+            }
+
+            table.role-table tr>th.fix-layout.l {
+                width: 256px;
+            }
+        </style>
     </head>
 
     <body>
@@ -29,26 +42,236 @@
         <div class="ctx">
             <article>
                 <section>
-                    <p>Every roles who mentioned in this page is based on the manual from base game, <i>New Moon</i> and
-                        <i>The Village</i> expansion packs are retrived from <a
+                    <p>Every roles who mentioned in this page is based on the manual from base game and <i>New Moon</i>
+                        expansion packs are retrived from <a
                             href="https://cdn.1j1ju.com/medias/5f/6f/6b-the-werewolves-of-millers-hollow-the-pact-rulebook.pdf">manual
                             from <i>The Pact</i></a>. Considering unpopularity of the <i>Werewolf</i>'s expansion packs,
-                        roles from <i>Characters</i> expansion pack are not included due to overcomplexity of rules.
-                    </p>
-											<p>Most variants inhert majority roles and abilities from the original game with localization.
-												 Therefore, their localized name will be appeared first along with translation or equivalent 
-												 name from original game if applied.</p>
+                        roles from <i>The Village</i> and <i>Characters</i> expansion pack are not included due to
+                        overcomplexity of rules and ambiguous description accordingly. </p>
+                    <p>Most variants inhert majority roles and abilities from the original game with localization.
+                        Therefore, their localized name will be appeared first along with translation or equivalent name
+                        from original game if applied.</p>
                 </section>
                 <section>
-										<ul>
-											<li>Origin
-														<ul>
-															<li>Base game</li>
-															<li><i>New Moon</i></li>
-															<li><i>The Village</i></li>
-														</ul>
-											</li>
-											<li>Chinese</li>
+                    <header>
+                        <h3>Context menu</h3>
+                    </header>
+                    <nav class="fragment-link">
+                        <ul>
+                            <li>
+                                <a href="#origin">
+                                    <h5>Origin</h5>
+                                </a>
+                                <ul>
+                                    <li>
+                                        <a href="#origin-base">
+                                            <h6>Base game</h6>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#origin-newmoon">
+                                            <h6><i>New Moon</i></h6>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#chinese">
+                                    <h5>Chinese</h5>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </section>
+                <hr />
+                <section>
+                    <header>
+                        <h3>Roles descriptions</h3>
+                    </header>
+                    <p></p>
+                    <h5 id="origin">Origin</h5>
+                    <h6 id="origin-base">Base game</h6>
+                    <table border="1" class="role-table">
+                        <tr>
+                            <th class="fix-layout s">Role ID</th>
+                            <th class="fix-layout l">Name</th>
+                            <th class="fix-layout m">Required roles</th>
+                            <th class="fix-layout m">Primary party</th>
+                            <th class="fix-layout s">Max no. of players</th>
+                            <th>Description</th>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Villager</td>
+                            <td class="highlight error">Yes</td>
+                            <td class="highlight success">Townfolk</td>
+                            <td>&infin;</td>
+                            <td>
+                                <p>A fundamental role with no actions at night.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Seer</td>
+                            <td class="highlight error">Yes</td>
+                            <td class="highlight success">Townfolk</td>
+                            <td>1</td>
+                            <td>
+                                <p>Allow revealing one of the participants' primary party at night via moderator.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Cupid</td>
+                            <td>No</td>
+                            <td class="highlight warn">Third party</td>
+                            <td>1</td>
+                            <td>
+                                <p>Select two participants &lpar;include Cupid itself&rpar; to becomes as a couple at
+                                    the initial state.</p>
+                                <p>Cupid's actual party is affected by combinations of couple's parties as below:
+                                <ul>
+                                    <li><b>Townfolk - Townfolk &lpar;or Cupid&rpar;</b>: Townfolk</li>
+                                    <li><b>Werewolf - Werewolf</b>: Werewolf</li>
+                                    <li><b>Werewolf &lpar;or Piper&rpar; - Townfolk &lpar;or Cupid&rpar;</b>: Third
+                                        party</li>
+                                </ul>
+                                </p>
+                                <p>Win conditions in third party role: <b>eliminate all participants except himself&sol;herself and the couple</b>, no matter
+                                    which parties are them. </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Witch</td>
+                            <td class="highlight error">Yes</td>
+                            <td class="highlight success">Townfolk</td>
+                            <td>1</td>
+                            <td>
+                                <p>Allow heal, poison or do both to one of the participants at night. Each abilities can
+                                    be used once per game round only.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Hunter</td>
+                            <td class="highlight error">Yes</td>
+                            <td class="highlight success">Townfolk</td>
+                            <td>1</td>
+                            <td>
+                                <p>Unless eliminated by poisoning or couple being elimated, Hunter can pick one of the
+                                    participants to strike back right after his devoution has been announced.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>Thief</td>
+                            <td>No</td>
+                            <td class="highlight warn">Third party</td>
+                            <td>1</td>
+                            <td>
+                                <p>Two additional Villager card added into card deck and randomly reserve two role cards
+                                    before distributing role card to participants. Thief can reveal the reserved cards
+                                    and pick one of the card to exchange his&sol;her role.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>Little girl</td>
+                            <td>No</td>
+                            <td class="highlight success">Townfolk</td>
+                            <td>1</td>
+                            <td>
+                                <p>She can <b>secretly peek</b> when Werewolfs are going to murder one of the members in
+                                    Townfolk at night. However, she will be elimated if discovered by Werewolves.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>8</td>
+                            <td>Werewolves</td>
+                            <td>No</td>
+                            <td class="highlight error">Werewolf</td>
+                            <td><a href="./#rules">Variable</a></td>
+                            <td>
+                                <p>They can elimilate one of the non-Werewolf participant at night and disguise as
+                                    Townfolk during the day.</p>
+                            </td>
+                        </tr>
+                    </table>
+                    <h6 id="origin-newmoon"><i>New Moon</i></h6>
+                    <table border="1" class="role-table">
+                        <tr>
+                            <th class="fix-layout s">Role ID</th>
+                            <th class="fix-layout l">Name</th>
+                            <th class="fix-layout m">Required roles</th>
+                            <th class="fix-layout m">Primary party</th>
+                            <th class="fix-layout s">Max no. of players</th>
+                            <th>Description</th>
+                        </tr>
+                        <tr>
+                            <td>9</td>
+                            <td>Idiot</td>
+                            <td>No</td>
+                            <td class="highlight success">Townfolk</td>
+                            <td>1</td>
+                            <td>
+                                <p>Idiot can continue to play with revoked voting ability if he&sol;she was picked
+                                    during judging session.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>10</td>
+                            <td>Elder</td>
+                            <td>No</td>
+                            <td class="highlight success">Townfolk</td>
+                            <td>1</td>
+                            <td>
+                                <p>When he&sol;she is murdered by Werewolves first time, all Townfolk party members'
+                                    special power will be disapperared. He&sol;She becomes elimilated if either murdered
+                                    by Werewolves twice or causing deaths, which commited by other non-Werewolf party
+                                    member.</p>
+                                <p>If he&sol;she revived by Witch, his&sol;her life is counted as one.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>11</td>
+                            <td>Scapegoat</td>
+                            <td>No</td>
+                            <td class="highlight success">Townfolk</td>
+                            <td>1</td>
+                            <td>
+                                <p>If vote result from judging session is tie, Scapegoat will be eilimated automatically
+                                    instead of moderator's preference. Once eliminated in judging session, he can
+                                    revokes voting abilities to serval participants on the next day judging session.
+                                    Revoke voting abilities to all participants is forbidden.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>12</td>
+                            <td>Defender</td>
+                            <td>No</td>
+                            <td class="highlight success">Townfolk</td>
+                            <td>1</td>
+                            <td>
+                                <p>Each night Defender can protect any participants &lpar;include himself&rpar;, who not
+                                    be protected last night to prevent being murdered by Werewolf.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>13</td>
+                            <td>Piper</td>
+                            <td>No</td>
+                            <td class="highlight warn">Third party</td>
+                            <td>1</td>
+                            <td>
+                                <p>Each nights, Piper can charms two participants until every participants are being
+                                    charmed except him&sol;her.</p>
+                                <p>Although players who being charmed does not affect their abilities from the roles, it
+                                    cannot be cured by any methods.</p>
+                                <p>Win condition: <b>All other participants</b> are being <b>charmed</b>.</p>
+                            </td>
+                        </tr>
+                    </table>
                 </section>
             </article>
             <footer class="copyright">
