Fix table layout

--- a/roles.html
+++ b/roles.html
@@ -17,16 +17,8 @@
         <link rel="next" href="archive.html" />
         <link type="text/css" rel="stylesheet" href="common.css">
         <style>
-            table.role-table tr>th.fix-layout.s {
-                width: 56px;
-            }
-
-            table.role-table tr>th.fix-layout.m {
-                width: 128px;
-            }
-
-            table.role-table tr>th.fix-layout.l {
-                width: 256px;
+            table.dynamic-layout.role-table tr>th.desc {
+                min-width: 350px;
             }
         </style>
     </head>
@@ -91,14 +83,14 @@
                     <p></p>
                     <h5 id="origin">Origin</h5>
                     <h6 id="origin-base">Base game</h6>
-                    <table border="1" class="role-table">
+                    <table border="1" class="dynamic-layout role-table">
                         <tr>
-                            <th class="fix-layout s">Role ID</th>
-                            <th class="fix-layout l">Name</th>
-                            <th class="fix-layout m">Required roles</th>
-                            <th class="fix-layout m">Primary party</th>
-                            <th class="fix-layout s">Max no. of players</th>
-                            <th>Description</th>
+                            <th>Role ID</th>
+                            <th>Name</th>
+                            <th>Required roles</th>
+                            <th>Primary party</th>
+                            <th>Max no. of players</th>
+                            <th class="desc">Description</th>
                         </tr>
                         <tr>
                             <td>1</td>
@@ -199,14 +191,14 @@
                         </tr>
                     </table>
                     <h6 id="origin-newmoon"><i>New Moon</i></h6>
-                    <table border="1" class="role-table">
+                    <table border="1" class="dynamic-layout role-table">
                         <tr>
-                            <th class="fix-layout s">Role ID</th>
-                            <th class="fix-layout l">Name</th>
-                            <th class="fix-layout m">Required roles</th>
-                            <th class="fix-layout m">Primary party</th>
-                            <th class="fix-layout s">Max no. of players</th>
-                            <th>Description</th>
+                            <th>Role ID</th>
+                            <th>Name</th>
+                            <th>Required roles</th>
+                            <th>Primary party</th>
+                            <th>Max no. of players</th>
+                            <th class="desc">Description</th>
                         </tr>
                         <tr>
                             <td>9</td>
