Add compression subheader

--- a/archive.html
+++ b/archive.html
@@ -116,6 +116,8 @@
                             <td>00</td>
                         </tr>
                     </table>
+                    <h5>Compression flag</h5>
+                    <p></p>
                 </section>
                 <hr />
                 <section id="checksum">
@@ -192,7 +194,7 @@
                     </table>
                 </section>
                 <hr />
-                <section id="recdata-pref">
+                <section id="recdata">
                     <header>
                         <h3>Recorded data</h3>
                     </header>
