--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <li>
                             <p><b>Win condition:</b>
                             <ul>
-                                <li><b>Werewolf:</b> Elimilate all members in Townfolk party and prevent being
+                                <li><b>Werewolf:</b> Eliminate all members in Townfolk party and prevent being
                                     identified during discussion section</li>
                                 <li><b>Townfolk:</b> Find all suspects of Werewolf before being eliminated</li>
                                 <li>Third-party roles has unique winning condition, please refer to <a
