--- a/roles.html
+++ b/roles.html
@@ -372,8 +372,8 @@
                                 <td>1</td>
                                 <td>
                                     <p>After she commited murder with other werewolf, she can seduce another player that
-                                        once she eliminated, the victum will also be eliminated with no special ability
-                                        can be activated.</p>
+                                        once she eliminated next day, the victum will also be eliminated with no special ability
+                                        can be activated. Otherwise, the seduction discarded and repeat the procedure at night.</p>
                                     <p>Self-reveal is forbidden for this role.</p>
                                 </td>
                             </tr>
